--- a/app/src/main/res/layout/activity_edit_appoinment.xml
+++ b/app/src/main/res/layout/activity_edit_appoinment.xml
@@ -9,6 +9,7 @@
     tools:context=".EditAppoinmentActivity">
 
     <ScrollView
+        android:id="@+id/scrollView"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -132,13 +133,24 @@
 
             </LinearLayout>
 
-            <fragment
-                android:id="@+id/naverMapView"
+            <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="250dp"
-                app:navermap_zoom="20"
-                android:layout_marginTop="10dp"
-                class="com.naver.maps.map.MapFragment" />
+                android:layout_height="wrap_content">
+
+                <fragment
+                    android:id="@+id/naverMapView"
+                    android:layout_width="match_parent"
+                    android:layout_height="250dp"
+                    app:navermap_zoom="20"
+                    android:layout_marginTop="10dp"
+                    class="com.naver.maps.map.MapFragment" />
+
+                <TextView
+                    android:id="@+id/scrollHelpTxt"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"/>
+
+            </FrameLayout>
 
             <Button
                 android:id="@+id/okBtn"
