--- a/app/src/main/res/layout/activity_my_settinsg.xml
+++ b/app/src/main/res/layout/activity_my_settinsg.xml
@@ -23,45 +23,72 @@
                 app:civ_border_width="2dp"/>
 
             <LinearLayout
-                android:id="@+id/editNicknameLayout"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
                 android:orientation="horizontal">
 
-                <ImageView
-                    android:id="@+id/socialLoginImg"
-                    android:layout_width="25dp"
-                    android:layout_height="25dp"
-                    android:src="@drawable/person_icon"
-                    android:layout_marginTop="7dp"
-                    android:padding="3dp"
-                    android:layout_marginRight="10dp"/>
-
                 <TextView
-                    android:id="@+id/nicknameTxt"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"/>
+
+                <LinearLayout
+                    android:id="@+id/editNicknameLayout"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="닉네임"
-                    android:textSize="19sp"
-                    android:layout_marginTop="10dp"/>
+                    android:layout_marginTop="10dp"
+                    android:layout_marginLeft="20dp"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:id="@+id/socialLoginImg"
+                        android:layout_width="25dp"
+                        android:layout_height="25dp"
+                        android:src="@drawable/person_icon"
+                        android:layout_marginTop="7dp"
+                        android:padding="3dp"
+                        android:layout_marginRight="10dp"/>
+
+                    <TextView
+                        android:id="@+id/nicknameTxt"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="닉네임"
+                        android:textSize="19sp"
+                        android:layout_marginTop="10dp"/>
+
+                    <ImageView
+                        android:layout_width="25dp"
+                        android:layout_height="25dp"
+                        android:src="@drawable/edit_icon"
+                        android:layout_marginTop="7dp"
+                        android:padding="2dp"
+                        android:layout_marginLeft="10dp"/>
+
+                </LinearLayout>
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"/>
 
                 <ImageView
+                    android:id="@+id/logoutImg"
                     android:layout_width="25dp"
                     android:layout_height="25dp"
-                    android:src="@drawable/edit_icon"
+                    android:src="@drawable/logout_close_exit_icon"
                     android:layout_marginTop="7dp"
-                    android:padding="2dp"
-                    android:layout_marginLeft="10dp"/>
+                    android:padding="1dp"
+                    android:layout_gravity="center_vertical"/>
 
             </LinearLayout>
 
 
             <TextView
+                android:layout_marginTop="15dp"
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:background="#DFDFDF"/>
-
 
             <LinearLayout
                 android:id="@+id/readyTimeLayout"
