--- a/app/src/main/res/layout/activity_my_settinsg.xml
+++ b/app/src/main/res/layout/activity_my_settinsg.xml
@@ -162,9 +162,8 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="30분"
+                    android:text=" 변경"
                     android:textSize="18sp"
-                    android:visibility="invisible"
                     android:textColor="@color/black"/>
 
             </LinearLayout>
