--- a/app/src/main/res/layout/activity_view_appointment_detail.xml
+++ b/app/src/main/res/layout/activity_view_appointment_detail.xml
@@ -7,5 +7,11 @@
         android:layout_height="match_parent"
         tools:context=".ViewAppointmentDetailActivity">
 
+        <fragment
+            android:id="@+id/naverMapFrag"
+            android:layout_width="match_parent"
+            android:layout_height="250dp"
+            class="com.naver.maps.map.MapFragment"/>
+
     </LinearLayout>
 </layout>
