--- a/app/src/main/res/layout/invited_appointment_list_item.xml
+++ b/app/src/main/res/layout/invited_appointment_list_item.xml
@@ -9,7 +9,7 @@
     <LinearLayout
         android:gravity="center_vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="60dp"
         android:orientation="horizontal"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp">
@@ -45,7 +45,10 @@
 
     </LinearLayout>
 
-
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/gray"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -57,7 +60,7 @@
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_marginLeft="5dp"
-            android:padding="10dp"
+            android:padding="5dp"
             android:src="@drawable/flag_yellow_marker_icon"/>
 
         <TextView
