--- a/app/src/main/res/layout/activity_my_settinsg.xml
+++ b/app/src/main/res/layout/activity_my_settinsg.xml
@@ -142,6 +142,7 @@
                 android:orientation="horizontal">
 
                 <TextView
+                    android:id="@+id/passwordEdit"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textStyle="bold"
