--- a/app/src/main/res/layout/my_custom_alert_edt.xml
+++ b/app/src/main/res/layout/my_custom_alert_edt.xml
@@ -3,14 +3,20 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="20dp"
-    android:orientation="vertical">
+    android:orientation="horizontal"
+    android:gravity="center_horizontal">
 
     <EditText
         android:id="@+id/minuteEdt"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:hint="보통 몇 분이 걸리시나요?"
+        android:hint="00"
         android:inputType="number"/>
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="분"
+        android:textSize="20sp"/>
 
 </LinearLayout>
