--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -38,6 +38,12 @@
         </LinearLayout>
 
         <TextView
+            android:id="@+id/emailTxt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=""/>
+
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="25dp"
@@ -65,27 +71,54 @@
             android:inputType="textPassword"
             android:hint="비밀번호를 입력하세요"/>
 
+        <TextView
+            android:id="@+id/checkTxt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=""/>
+
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="25dp"
+            android:layout_marginTop="20dp"
             android:text="사용하실 닉네임을 입력해 주세요"/>
 
-        <EditText
-            android:id="@+id/nicknameEdt"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_marginTop="5dp"
             android:layout_height="wrap_content"
-            android:inputType="textPassword"
-            android:hint="닉네임을 입력해 주세요"/>
+            android:orientation="horizontal">
+
+            <EditText
+                android:id="@+id/nicknameEdt"
+                android:layout_width="250dp"
+                android:layout_marginTop="5dp"
+                android:layout_height="wrap_content"
+                android:inputType="textEmailAddress"
+                android:hint="닉네임을 입력해 주세요"/>
+
+            <Button
+                android:id="@+id/nicknameCheckBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:text="중복검사"/>
+
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/nicknameTxt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=""/>
 
         <Button
             android:id="@+id/sighUpBtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="10dp"
             android:text="회원가입"/>
+
     </LinearLayout>
 
 
