--- a/app/src/main/res/layout/activity_view_appointment_detail.xml
+++ b/app/src/main/res/layout/activity_view_appointment_detail.xml
@@ -51,11 +51,30 @@
                             android:textSize="16sp" />
 
                         <TextView
-                            android:id="@+id/modifyBtn"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"/>
+
+                        <LinearLayout
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginLeft="92dp"
-                            android:text="수정하기" />
+                            android:orientation="horizontal"
+                            android:gravity="center_vertical">
+
+                            <TextView
+                                android:id="@+id/modifyBtn"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="약속 수정하기" />
+
+                            <ImageView
+                                android:layout_marginLeft="5dp"
+                                android:layout_width="25dp"
+                                android:layout_height="25dp"
+                                android:padding="3dp"
+                                android:src="@drawable/edit_icon"/>
+
+                        </LinearLayout>
 
                     </LinearLayout>
 
