--- a/app/src/main/res/layout/activity_modify_appointment.xml
+++ b/app/src/main/res/layout/activity_modify_appointment.xml
@@ -12,7 +12,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="변경하실 약속의 제목을 입력해 주세요"/>
+            android:text="약속의 제목을 입력해 주세요"/>
 
         <EditText
             android:layout_width="match_parent"
@@ -65,12 +65,6 @@
         </LinearLayout>
 
         <TextView
-            android:layout_marginTop="20dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="변경하실 약속 장소의 이름을 입력해 주세요"/>
-
-        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
@@ -106,7 +100,7 @@
             class="com.naver.maps.map.MapFragment" />
 
         <Button
-            android:id="@+id/saveBtn"
+            android:id="@+id/modifyBtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
