--- a/app/src/main/res/layout/friend_list_item.xml
+++ b/app/src/main/res/layout/friend_list_item.xml
@@ -5,6 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal"
     android:padding="10dp"
+    android:id="@+id/friendLinearLayout"
     android:gravity="center_vertical">
 
     <de.hdodenhof.circleimageview.CircleImageView
