--- a/app/src/main/res/layout/activity_my_settinsg.xml
+++ b/app/src/main/res/layout/activity_my_settinsg.xml
@@ -272,5 +272,16 @@
             android:layout_height="1dp"
             android:background="#DFDFDF" />
 
+        <TextView
+            android:id="@+id/unregisterBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="회원 탈퇴"
+            android:layout_gravity="right"
+            android:layout_marginRight="30dp"
+            android:layout_marginTop="20dp"
+            android:textSize="17sp"/>
+
+
     </LinearLayout>
 </layout>
