--- a/app/src/main/res/layout/activity_view_appointment_detail.xml
+++ b/app/src/main/res/layout/activity_view_appointment_detail.xml
@@ -8,6 +8,7 @@
         tools:context=".ViewAppointmentDetailActivity">
 
         <ScrollView
+            android:id="@+id/scrollView"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
@@ -16,11 +17,23 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-                <fragment
-                    android:id="@+id/naverMapFrag"
-                    class="com.naver.maps.map.MapFragment"
+
+                <FrameLayout
                     android:layout_width="match_parent"
-                    android:layout_height="250dp" />
+                    android:layout_height="wrap_content">
+
+                    <fragment
+                        android:id="@+id/naverMapFrag"
+                        class="com.naver.maps.map.MapFragment"
+                        android:layout_width="match_parent"
+                        android:layout_height="250dp" />
+
+                    <TextView
+                        android:id="@+id/scrollHelpTxt"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"/>
+
+                </FrameLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
