--- a/app/src/main/res/layout/fragment_main_appointment.xml
+++ b/app/src/main/res/layout/fragment_main_appointment.xml
@@ -14,18 +14,15 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:id="@+id/appointmentRecyclerView">
-
-
-            </androidx.recyclerview.widget.RecyclerView>
+                android:id="@+id/appointmentRecyclerView"/>
 
             <Button
                 android:id="@+id/addAppointmentBtn"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_gravity="right|bottom"
-                android:layout_marginRight="20dp"
-                android:layout_marginBottom="10dp"
+                android:layout_marginRight="30dp"
+                android:layout_marginBottom="20dp"
                 android:background="@drawable/notes_add_icon"/>
 
         </FrameLayout>
